crates/wgso/tests/cases_invalid/directive_parsing/.expected
error: expected line break
 --> ./tests/cases_invalid/directive_parsing/invalid_next_token.wgsl:1:23
  |
1 | #shader<compute> test invalidtoken
  |                       ^^^^^^^^^^^^
  |
error: expected `import`, `shader`, `init` or `run`
 --> ./tests/cases_invalid/directive_parsing/multiple_expected_token.wgsl:2:2
  |
2 | #invalid
  |  ^^^^^^^
  |
error: expected `compute` or `render`
 --> ./tests/cases_invalid/directive_parsing/single_expected_token.wgsl:2:9
  |
2 | #shader<invalid> test
  |         ^^^^^^^
  |
error: unexpected end of file
 --> ./tests/cases_invalid/directive_parsing/unexpected_end_of_file.wgsl:1:17
  |
1 | #shader<compute>
  |                 ^
  |